test/syntax/fail/undefined_function.cash
contract Test(int x, string y) {
    function hello(sig s, pubkey pk) {
        require(test(s, pk));
    }

    function world(int a) {
        require(a + 5 == 10);
    }
}
